flux/apps/cluster1/cgit/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cgit
subsets:
- addresses:
  - ip: 192.168.0.144
  ports:
  - port: 80
    name: http
