flux/apps/cluster1/cgit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cgit
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector: {}
  type: ClusterIP
