flux/apps/cluster1/cgit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cgit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
    acme.cert-manager.io/http01-ingress-class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cgit.home.wugi.info
    secretName: cgit-ingress-certs
  rules:
  - host: cgit.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cgit
            port:
              number: 80
